[package]
name = "flep"
version = "0.1.0"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "File transfer protocol (FTP) library"
documentation = "https://docs.rs/flep"
repository = "https://github.com/dylanmckay/flep"

readme = "README.md"
license = "MIT"

keywords = ["ftp"]

[lib]
path = "src/lib.rs"

[workspace]

[dependencies]
mio = "0.6.0"
uuid = { version = "0.3", features = ["v4"] }
flep_protocol = { path = "src/protocol", version = "0.1.0" }
