[package]
name = "flep"
version = "0.1.2"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "File transfer protocol (FTP) library"
documentation = "https://docs.rs/flep"
repository = "https://github.com/dylanmckay/flep"

readme = "README.md"
license = "MIT"

keywords = ["ftp", "server", "client", "file", "protocol"]

[lib]
path = "src/lib.rs"

[workspace]

[dependencies]
mio = "0.6"
uuid = { version = "0.5", features = ["v4"] }
flep_protocol = { path = "src/protocol", version = "0.1.2" }
