[package]
name = "flep_protocol"
version = "0.1.0"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "File transfer protocol (FTP) library"
documentation = "https://docs.rs/flep_protocol"
repository = "https://github.com/dylanmckay/flep"

license = "MIT"

keywords = ["ftp"]

[lib]
path = "lib.rs"

[dependencies]
rfc1700 = "0.1"
itertools = "0.5"
byteorder = "0.5"
