[package]
name = "flep_protocol"
version = "0.1.1"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "File transfer protocol (FTP) library"
documentation = "https://docs.rs/flep_protocol"
repository = "https://github.com/dylanmckay/flep"

license = "MIT"

keywords = ["ftp", "file", "transfer", "protocol"]

[lib]
path = "lib.rs"

[dependencies]
rfc1700 = "0.1"
itertools = "0.6"
byteorder = "1.0"
